Changed bootstrap's default navigation bar breakpoint to 920px to make sure that navbar is displayed well on small screen resolutions.

--- a/src/css/bootstrap-theme.css
+++ b/src/css/bootstrap-theme.css
@@ -5,6 +5,43 @@
  */
 @import url(////fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic&subset=latin,latin-ext);
 
+/* Change bootstrap's default breakpoint */
+@media (max-width: 920px) {
+
+    .navbar-header {
+
+        float: none;
+    }
+    .navbar-toggle {
+
+        display: block;
+    }
+    .navbar-collapse {
+
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-collapse.collapse {
+
+        display: none !important;
+    }
+    .navbar-nav {
+
+        float: none !important;
+        margin: 7.5px -15px;
+    }
+    .navbar-nav>li {
+
+        float: none;
+    }
+    .navbar-nav>li>a {
+
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+}
+
+
 body {
   font-family: 'Source Sans Pro',Arial,Helvetica,sans-serif;
 }
@@ -14,11 +51,15 @@ a {
 }
 
 .navbar-default {
-  background-color: rgba(85, 114, 161, 0.9);
+
+    border: 0;
+    background-color: rgba(85, 114, 161, 0.9);
 }
 
 .navbar-default .navbar-nav > li > a {
+
   color: #fff;
+    line-height: 23px;
 }
 
 .navbar-default .navbar-brand {
@@ -45,6 +86,11 @@ a {
 .navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover {
   background-color: rgba(119, 142, 180, 0.9);
   color: #fff;
+}
+
+.navbar-form {
+
+    padding-top: 1px;
 }
 
 .idai-footer {
